Implement get claims for user, post claims
